--- a/book-trading-club/src/main/resources/application.properties
+++ b/book-trading-club/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/book-trading-club
 spring.datasource.username=postgres
-spring.datasource.password=183043
+spring.datasource.password=ms
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-server.port=8083
