--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -17,9 +17,13 @@
     "@angular/core": "~11.2.7",
     "@angular/forms": "~11.2.7",
     "@angular/http": "^7.2.16",
+    "@angular/localize": "~11.2.7",
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "@types/jquery": "^3.5.5",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
@@ -29,7 +33,7 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.6",
+    "@angular-devkit/build-angular": "^0.1102.13",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
     "@types/jasmine": "~3.6.0",
