--- a/book-trading-club/src/main/resources/application.properties
+++ b/book-trading-club/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/book-trading-club
 spring.datasource.username=postgres
-spring.datasource.password=183043
+spring.datasource.password=ms
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
