--- a/book-trading-club/src/main/resources/application.properties
+++ b/book-trading-club/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 server.port=8083
+server.error.include-message: always
+server.error.include-binding-errors: always
